fix: standardize environment variables to POLICY_HUB_URL and POLICY_HUB_TOKEN

--- a/.github/workflows/publish-policy.yml
+++ b/.github/workflows/publish-policy.yml
@@ -34,15 +34,15 @@ jobs:
     - name: Validate API configuration
       id: api-config
       run: |
-        if [[ -z "${{ secrets.POLICY_API_URL }}" ]]; then
-          echo "❌ Missing POLICY_API_URL secret"
-          echo "Please configure POLICY_API_URL in repository secrets"
+        if [[ -z "${{ secrets.POLICY_HUB_URL }}" ]]; then
+          echo "❌ Missing POLICY_HUB_URL secret"
+          echo "Please configure POLICY_HUB_URL in repository secrets"
           echo "Go to: Settings → Secrets and variables → Actions → Repository secrets"
           exit 1
         fi
         
         echo "✅ API configuration validated"
-        echo "API_URL=${{ secrets.POLICY_API_URL }}" >> $GITHUB_ENV
+        echo "API_URL=${{ secrets.POLICY_HUB_URL }}" >> $GITHUB_ENV
       
     - name: Setup Node.js for JSON validation
       uses: actions/setup-node@v4
@@ -255,7 +255,7 @@ jobs:
         
     - name: Publish policy
       env:
-        POLICY_API_TOKEN: ${{ secrets.POLICY_API_TOKEN }}
+        POLICY_HUB_TOKEN: ${{ secrets.POLICY_HUB_TOKEN }}
       run: |
         METADATA_CONTENT=$(cat "$VERSION_DIR/metadata.json")
         
@@ -267,8 +267,8 @@ jobs:
         CURL_CMD="$CURL_CMD '$API_URL/api/v1/internal/policies/$METADATA_NAME/versions/$METADATA_VERSION'"
         
         # Add authentication header if token is provided
-        if [[ -n "${POLICY_API_TOKEN:-}" ]]; then
-          CURL_CMD="$CURL_CMD -H 'Authorization: Bearer $POLICY_API_TOKEN'"
+        if [[ -n "${POLICY_HUB_TOKEN:-}" ]]; then
+          CURL_CMD="$CURL_CMD -H 'Authorization: Bearer $POLICY_HUB_TOKEN'"
         fi
         
         CURL_CMD="$CURL_CMD -F 'metadata=$METADATA_CONTENT'"
